--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
   <div class="card">
-    <img class="img-eq" src="./images/image-equilibrium.jpg" alt="" srcset="">
-    <h3>Equilibrium #3429</h3>
-
-    <p> Equilibrium collection promotes balance and calm.</p>
-
-    0.041 ETH
-    3 days left
-  
-    Creation of Jules Wyvern
+    <img class="img-eq" src="./images/image-equilibrium.jpg" alt="imagen nft" srcset="">
+    <h3 class="title">Equilibrium #3429</h3>
+    <p>Our Equilibrium collection promotes balance and calm.</p>
+    <span class="eth-text"><img src="./images/icon-ethereum.svg">0.041 ETH</span>
+    <span class="days-left"><img src="./images/icon-clock.svg">3 days left</span> 
+    <hr>
+    <div class="creation-of">      
+      <p><img src="./images/image-avatar.png" class="img-avatar" alt="" srcset="">Creation of <span class="nombre-creador">Jules Wyvern</span></p>
+    </div>
+    
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
