--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
   <div class="card">
     <img class="img-eq" src="./images/image-equilibrium.jpg" alt="imagen nft" srcset="">
     <h3 class="title">Equilibrium #3429</h3>
-    <p>Our Equilibrium collection promotes balance and calm.</p>
+    <p class="subtitle">Our Equilibrium collection promotes balance and calm.</p>
     <span class="eth-text"><img src="./images/icon-ethereum.svg">0.041 ETH</span>
     <span class="days-left"><img src="./images/icon-clock.svg">3 days left</span> 
     <hr>
     <div class="creation-of">      
-      <p><img src="./images/image-avatar.png" class="img-avatar" alt="" srcset="">Creation of <span class="nombre-creador">Jules Wyvern</span></p>
+      <p class="creation-of"><img src="./images/image-avatar.png" class="img-avatar" alt="" srcset="">Creation of <span class="nombre-creador">Jules Wyvern</span></p>
     </div>
     
   </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U" target="_blank">Frontend Mentor</a>
+    Coded by <a href="https://www.github.com/faustocalvinio">Fausto Calviño</a>
   </div>
 </body>
 </html>
