--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <h3 class="title">Equilibrium #3429</h3>
     <p class="subtitle">Our Equilibrium collection promotes balance and calm.</p>
     <span class="eth-text"><img src="./images/icon-ethereum.svg">0.041 ETH</span>
-    <span class="days-left"><img src="./images/icon-clock.svg">3 days left</span> 
-    <hr>
+    <span class="days-left"><img src="./images/icon-clock.svg">3 days left</span>     
+    <div class="jules">
     <div class="creation-of">      
       <p class="creation-of"><img src="./images/image-avatar.png" class="img-avatar" alt="" srcset="">Creation of <span class="nombre-creador">Jules Wyvern</span></p>
+    </div>
     </div>
     
   </div>
