--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <img class="img-eq" src="./images/image-equilibrium.jpg" alt="imagen nft" srcset="">
     <h3 class="title">Equilibrium #3429</h3>
     <p class="subtitle">Our Equilibrium collection promotes balance and calm.</p>
-    <span class="eth-text"><img src="./images/icon-ethereum.svg">0.041 ETH</span>
-    <span class="days-left"><img src="./images/icon-clock.svg">3 days left</span>     
+    <div class="eth-cont">
+    <img src="./images/icon-ethereum.svg">
+    <span class="eth-text">0.041 ETH</span>
+    <!-- </div> -->
+    <!-- <div class="days-cont"> -->
+    <img src="./images/icon-clock.svg">
+    <span class="days-left">3 days left</span>
+    </div>     
     <div class="jules">
     <div class="creation-of">      
       <p class="creation-of"><img src="./images/image-avatar.png" class="img-avatar" alt="" srcset="">Creation of <span class="nombre-creador">Jules Wyvern</span></p>
