--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
     <img class="img-eq" src="./images/image-equilibrium.jpg" alt="imagen nft" srcset="">
     <h3 class="title">Equilibrium #3429</h3>
     <p class="subtitle">Our Equilibrium collection promotes balance and calm.</p>
-    <div class="eth-cont">
-    <img src="./images/icon-ethereum.svg">
-    <span class="eth-text">0.041 ETH</span>
-    <!-- </div> -->
-    <!-- <div class="days-cont"> -->
-    <img src="./images/icon-clock.svg">
-    <span class="days-left">3 days left</span>
-    </div>     
-    <div class="jules">
-    <div class="creation-of">      
-      <p class="creation-of"><img src="./images/image-avatar.png" class="img-avatar" alt="" srcset="">Creation of <span class="nombre-creador">Jules Wyvern</span></p>
-    </div>
+    <div class="container-details">
+      <div class="container-eth">
+        <img src="./images/icon-ethereum.svg">
+        <span class="eth-text">0.041 ETH</span>
+      </div>
+      <div class="days-cont">
+        <img src="./images/icon-clock.svg">
+        <span class="days-left">3 days left</span>
+      </div> 
+    </div>    
+    <div class="container-author">
+      <img class="img-avatar" src="images/image-avatar.png" alt="">
+      <p class="creation-of">Creation of <span class="author-name">Jules Wyvern</span></p>
     </div>
     
   </div>
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U" target="_blank">Frontend Mentor</a>
     Coded by <a href="https://www.github.com/faustocalvinio">Fausto Calviño</a>
-  </div>
+  </div> -->
 </body>
 </html>
