--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">  
-  <title>Frontend Mentor | NFT preview card component</title>  
+  <title>Frontend Mentor | NFT preview card component | Fausto Calviño </title>  
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
