--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
   <div class="card">
-    <img class="img-eq" src="./images/image-equilibrium.jpg" alt="imagen nft" srcset="">
+    <div class="container-imgs">
+      <img class="img-eq" src="./images/image-equilibrium.jpg" alt="" srcset="">
+      <div class="container-view">
+        <img class="img-view" src="./images/icon-view.svg" alt="" srcset="">
+      </div>
+    </div>
     <h3 class="title">Equilibrium #3429</h3>
     <p class="subtitle">Our Equilibrium collection promotes balance and calm.</p>
     <div class="container-details">
@@ -32,5 +37,6 @@
     Challenge by <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U" target="_blank">Frontend Mentor</a>
     Coded by <a href="https://www.github.com/faustocalvinio">Fausto Calviño</a>
   </div> -->
+  <script src="./js/main.js"></script>
 </body>
 </html>
