--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <img class="img-eq" src="./images/image-equilibrium.jpg" alt="" srcset="">
       <div class="container-view">
         <img class="img-view" src="./images/icon-view.svg" alt="" srcset="">
+        <div class="blue-bg"></div>
       </div>
     </div>
     <h3 class="title">Equilibrium #3429</h3>
