--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  <div class="card">
-    <div class="container-imgs">
-      <img class="img-eq" src="./images/image-equilibrium.jpg" alt="" srcset="">
-      <div class="container-view">
-        <img class="img-view" src="./images/icon-view.svg" alt="" srcset="">
-        <div class="blue-bg"></div>
-      </div>
-    </div>
+  <main class="card">   
+    <img class="img-eq" src="./images/image-equilibrium.jpg" alt="" srcset="">
     <h3 class="title">Equilibrium #3429</h3>
     <p class="subtitle">Our Equilibrium collection promotes balance and calm.</p>
     <div class="container-details">
@@ -33,7 +27,7 @@
       <p class="creation-of">Creation of <span class="author-name">Jules Wyvern</span></p>
     </div>
     
-  </div>
+  </main>
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U" target="_blank">Frontend Mentor</a>
     Coded by <a href="https://www.github.com/faustocalvinio">Fausto Calviño</a>
