--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     </div>
     
   </main>
-  <!-- <div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U" target="_blank">Frontend Mentor</a>
     Coded by <a href="https://www.github.com/faustocalvinio">Fausto Calviño</a>
-  </div> -->
+  </div>
   <script src="./js/main.js"></script>
 </body>
 </html>
