--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 </head>
 <body>
   <main class="card">   
-    <img class="img-eq" src="./images/image-equilibrium.jpg" alt="" srcset="">
+    <img class="img-eq" src="./images/image-equilibrium.jpg" alt="image equilibrium">
     <h3 class="title">Equilibrium #3429</h3>
     <p class="subtitle">Our Equilibrium collection promotes balance and calm.</p>
     <div class="container-details">
       <div class="container-eth">
-        <img src="./images/icon-ethereum.svg">
+        <img src="./images/icon-ethereum.svg" alt="image icon etherum">
         <span class="eth-text">0.041 ETH</span>
       </div>
       <div class="days-cont">
-        <img src="./images/icon-clock.svg">
+        <img src="./images/icon-clock.svg" alt="image icon clock">
         <span class="days-left">3 days left</span>
       </div> 
     </div>    
     <div class="container-author">
-      <img class="img-avatar" src="images/image-avatar.png" alt="">
+      <img class="img-avatar" src="images/image-avatar.png" alt="image avatar Jules Wyvern">
       <p class="creation-of">Creation of <span class="author-name">Jules Wyvern</span></p>
     </div>
     
