--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
     <div class="container-author">
       <img class="img-avatar" src="images/image-avatar.png" alt="image avatar Jules Wyvern">
       <p class="creation-of">Creation of <span class="author-name">Jules Wyvern</span></p>
-    </div>
-    
+    </div>    
   </main>
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U" target="_blank">Frontend Mentor</a>
     Coded by <a href="https://www.github.com/faustocalvinio">Fausto Calviño</a>
-  </div>
+  </div> -->
   <script src="./js/main.js"></script>
 </body>
 </html>
