--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
   <main class="card">   
     <img class="img-eq" src="./images/image-equilibrium.jpg" alt="image equilibrium">
+    <div class="bg-blue">
+      <img src="./images/icon-view.svg" alt="icon view">
+    </div>
     <h3 class="title">Equilibrium #3429</h3>
     <p class="subtitle">Our Equilibrium collection promotes balance and calm.</p>
     <div class="container-details">
