--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
       <p class="creation-of">Creation of <span class="author-name">Jules Wyvern</span></p>
     </div>    
   </main>
-  <!-- <div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U" target="_blank">Frontend Mentor</a>
     Coded by <a href="https://www.github.com/faustocalvinio">Fausto Calviño</a>
-  </div> -->
-  <script src="./js/main.js"></script>
+  </div>
 </body>
 </html>
