--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </div>    
   </main>
   <div class="attribution">
-    <span>Challenge by <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U" target="_blank">Frontend Mentor</a>
-    Coded by <a href="https://www.github.com/faustocalvinio">Fausto Calviño</a></span>
+    <span>Challenge by <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U" target="_blank">Frontend Mentor</a>.</span>
+    <span>Coded by <a href="https://www.github.com/faustocalvinio">Fausto Calviño</a>.</span>
   </div>
 </body>
 </html>
